@@ -73,6 +73,7 @@
     fully-qualified-moc-types
     unneeded-cast
     qt-keywords, with fixit included
+    qhash-with-char-pointer-key
   - auto-unexpected-qstringbuilder now also warns for lambdas returning QStringBuilder
   - performance optimizations
   - Added -header-filter=<regex> option to clazy-standalone. Only headers matching the regexp will have warnings,
